--- a/index.html
+++ b/index.html
@@ -3,13 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template</title>
+  <title>Quote Generator</title>
   <link rel="icon" type="image/png" href="https://www.google.com/s2/favicons?domain=jacinto.design">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="quote-container" id="quote-container">
+    <!-- Quote element -->
+    <div class="quote-text">
+      <i class="fas fa-quote-left"></i>
+      <span id="quote"/>
+    </div>
+    <!-- Author -->
+    <div class="quote-author">
+      <span id="author"/>
+    </div>
+    <!-- Buttons -->
+    <div class="button-container">
+      <button class="twitter-button" id="twitter" tittle="Tweet this!">
+        <i class="fa-brands fa-x-twitter"></i>
+      </button>
+      <button id="new-quote">New Quote</button>
+    </div>
+  </div>
+  <!-- Loader -->
+  <div class="loader" id="loader">
+
+  </div>
   <!-- Script-->
   <script src="script.js"></script>
+  <script src="quotes.js"></script>
 </body>
 </html>
